[BACKEND-34] Техника ловли рыбы (#12)
