# priv/static/swagger.json
@@ -43,6 +43,41 @@
         "description": "Список городов с возможностью фильтрации"
       }
     },
+    "/api/v1/fishing/techniques": {
+      "get": {
+        "tags": [
+          "Fishing.Technique"
+        ],
+        "summary": "",
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": {
+              "data": {
+                "techniques": {
+                  "$ref": "#/definitions/Techniques"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "type": "string",
+            "required": false,
+            "name": "name",
+            "in": "query",
+            "description": "Наименование"
+          }
+        ],
+        "operationId": "BehemothWeb.Api.V1.Fishing.TechniqueController.index",
+        "description": "Список техник ловли рыб с возможностью фильтрации"
+      }
+    },
     "/api/v1/auth/gateway/send_sms": {
       "post": {
         "tags": [
@@ -477,6 +512,37 @@
         "birthday": "1994-05-03"
       },
       "description": "Пользователь"
+    },
+    "Techniques": {
+      "type": "array",
+      "title": "Fishing.Techniques",
+      "items": {
+        "$ref": "#/definitions/Technique"
+      },
+      "description": "Список техник ловли"
+    },
+    "Technique": {
+      "type": "object",
+      "title": "Fishing.Technique",
+      "required": [
+        "name",
+        "id"
+      ],
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "Наименование"
+        },
+        "id": {
+          "type": "integer",
+          "description": "Id"
+        }
+      },
+      "example": {
+        "name": "спиннинг",
+        "id": 1
+      },
+      "description": "Техника ловли"
     },
     "City": {
       "type": "object",
